Use CollectionUtils.isEmpty