@@ -19,6 +19,7 @@ import com.amazonaws.services.lambda.runtime.events.APIGatewayV2HTTPEvent;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayV2HTTPResponse;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.convert.ConversionService;
+import io.micronaut.core.util.CollectionUtils;
 import io.micronaut.function.aws.proxy.ApiGatewayServletRequest;
 import io.micronaut.http.HttpHeaders;
 import io.micronaut.http.MutableHttpHeaders;
@@ -90,9 +91,8 @@ public final class APIGatewayV2HTTPEventServletRequest<B> extends ApiGatewayServ
 
     private Map<String, List<String>> getCookieHeaders() {
         List<String> cookies = requestEvent.getCookies();
-        if (cookies == null || cookies.isEmpty()) {
-            return Collections.emptyMap();
-        }
-        return Map.of(HttpHeaders.COOKIE, cookies);
+        return CollectionUtils.isEmpty(cookies)
+            ? Collections.emptyMap()
+            : Map.of(HttpHeaders.COOKIE, cookies);
     }
 }
